--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "jrd_task_loader",
   "version": "1.0.0",
   "description": "Provides a handler for multi-task requests to the server and returns the response for the client.",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "npx tsc",
+    "build": "webpack --config webpack.config.ts --mode development",
     "test": "jest",
     "clear_jest": "jest --clearCache"
   },
@@ -15,7 +19,7 @@
     "progress",
     "loader"
   ],
-  "author": "Junior Ramos <junior_ramos_dev@gmail.com>",
+  "author": "Junior Ramos <junior.ramos.dev@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.25.7",
@@ -31,9 +35,13 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.10.0",
     "jest": "^29.7.0",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.8.1"
+    "typescript-eslint": "^8.8.1",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   }
 }
