--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,27 @@
 {
   "compilerOptions": {
     "target": "es2016",
-    "module": "commonjs",
+    "declaration": true,
+    "declarationMap": true,
+    "emitDeclarationOnly": true,
+    "declarationDir": "dist",
+    "outDir": "./dist",
     "rootDir": "./src/",
     "moduleResolution": "node",
-    "baseUrl": ".",
-    "outDir": "./dist/",
-    "paths": {
-      //App Modules Aliases
-      "@/*": ["./src/*"],
-      "@common/*": ["./common/*"],
-      "@controllers/*": ["./controllers/*"],
-      "@core/*": ["./core/*"],
-      "@example/*": ["./modules/*"],
-    },
+    "baseUrl": "./",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
   },
   "ts-node": { 
     "transpileOnly": true,
     "require": ["tsconfig-paths/register"]
   },
   "exclude": [
-    "node_modues", "jest.config.ts",
-  ]
+    "node_modules",
+    "./dist/**/*", 
+    "./src/**/*.test.ts",
+    "./*.config.ts",
+  ],
 }
