--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "webpack --config webpack.config.ts --mode development",
+    "build": "tsup",
     "test": "jest",
     "clear_jest": "jest --clearCache"
   },
@@ -35,13 +35,10 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.10.0",
     "jest": "^29.7.0",
-    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "tsup": "^8.3.0",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.8.1",
-    "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
+    "typescript-eslint": "^8.8.1"
   }
 }
