--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.7",
     "@babel/preset-env": "^7.25.7",
+    "@babel/preset-typescript": "^7.25.7",
     "@eslint/js": "^9.12.0",
     "@jest/globals": "^29.7.0",
     "@types/cors": "^2.8.17",
