--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.10.0",
     "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "tsup": "^8.3.0",
